--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Well hello there...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Neptune</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Cooking, metal detecting, golfing, restoring cars.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Automotive test driver in the 70s</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Pawcatuck, CT</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Interest in web development-tech came from working with my dad.</p>
     </section>
 
     <footer id="footer">
